--- a/style/style.css
+++ b/style/style.css
@@ -400,7 +400,7 @@ width: 900px;
 
       body{
           max-width: 768px;
-          min-width: 480px;
+          min-width: 481px;
       }
 header{
 width: 768px;
@@ -517,7 +517,8 @@ width: 670px;
   @media screen and (max-width:480px){
   
       body{
-          width: 480px;
+         max-width: 480px;
+         min-width: 300px;
       }
   header{
       width: 480px;
@@ -577,7 +578,7 @@ padding-top: 30px;
 }
 .cont1{
 
-   height: 460px;
+  margin-bottom: 60px;
 display: flex;
 width: 400px;
 flex-direction: column;
@@ -606,6 +607,7 @@ flex-direction: column;
 align-items: center;
 width: 430px;
 padding-left: 14px;
+margin-top: 40px;
 }
 .fo{
 width: 420px;
